<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">442803696_s_application2</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg">إنشاء حساب مدرسة</string>
<string name="lbl_city">City</string>
<string name="lbl_school_number">School number</string>
<string name="lbl4">المنطقة</string>
<string name="lbl5">المدينة</string>
<string name="lbl2">اسم المدرسة </string>
<string name="lbl3">رقم المدرسة</string>
<string name="lbl_number_id">number ID</string>
<string name="lbl_terms_of_use">Terms of use</string>
<string name="msg_create_a_studen">Create a student account</string>
<string name="lbl_password2">password</string>
<string name="msg_i_agree_to_the">I agree to the terms and conditions</string>
<string name="lbl_sign_in">Sign-in</string>
<string name="msg2">أوافق على الشروط والأحكام</string>
<string name="lbl_school">School</string>
<string name="msg_create_a_school">Create a school account</string>
<string name="lbl_school_name">School name</string>
<string name="lbl_policy_use">Policy &amp; use</string>
<string name="lbl_sign_up">Sign-Up</string>
<string name="lbl_password">Password</string>
<string name="lbl8">مدرسة</string>
<string name="lbl_en">EN</string>
<string name="lbl9">طالب</string>
<string name="lbl6">كلمة المرور</string>
<string name="lbl7">نوع التسجيل</string>
<string name="lbl10">إنشاء حساب طالب</string>
<string name="lbl11">اسم الطالب </string>
<string name="lbl">ع</string>
<string name="lbl12">رقم الهوية</string>
<string name="lbl_student">Student</string>
<string name="lbl13">رقم الجوال</string>
<string name="lbl_name_student">name Student</string>
<string name="lbl_region">Region</string>
<string name="lbl14">تاريخ الميلاد</string>
<string name="lbl_brith_date">Brith Date </string>
<string name="lbl15">تسجيل الدخول </string>
<string name="lbl16">انشاء حساب </string>
<string name="msg_registration_ty">Registration type</string>
<string name="lbl17">الدعم الفني </string>
<string name="lbl18">شروط الاستخدام</string>
<string name="lbl_number_phone">number phone</string>
<string name="lbl_support">Support</string>
</resources>
