<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameTwoVM" type="com.sapplication.app.modules.frametwo.data.viewmodel.FrameTwoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumn"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearColumnarrowone"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <androidx.appcompat.widget.Toolbar
                android:gravity="center_horizontal"
                android:id="@+id/toolbarToolbar"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent" app:contentInsetStart="0dp">
                <LinearLayout android:id="@+id/linearRowarrowone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <FrameLayout android:id="@+id/frameStackarrowone"
                        android:layout_height="@dimen/_36pxv"
                        android:layout_marginBottom="@dimen/_4pxv"
                        android:layout_width="@dimen/_40pxh" style="@style/groupStylegray_50">
                        <ImageView android:id="@+id/imageArrowOne"
                            android:layout_gravity="end"
                            android:layout_height="@dimen/_1pxh"
                            android:layout_marginBottom="@dimen/_16pxv"
                            android:layout_marginStart="@dimen/_10pxh"
                            android:layout_marginTop="@dimen/_16pxv"
                            android:layout_width="@dimen/_20pxh"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_arrow1"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_arrow1"/>
                    </FrameLayout>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtTwo"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_34pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_weight="0.71"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{frameTwoVM.frameTwoModel.txtTwo}"
                        style="@style/txtIntersemibold22" tools:text="@string/msg"/>
                    <ImageView android:id="@+id/imageHome"
                        android:layout_height="@dimen/_35pxh"
                        android:layout_marginBottom="@dimen/_3pxv"
                        android:layout_marginStart="@dimen/_19pxh"
                        android:layout_marginTop="@dimen/_2pxv"
                        android:layout_width="@dimen/_41pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_19pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{frameTwoVM.frameTwoModel.txtLanguage}"
                style="@style/txtIntersemibold14" tools:text="@string/lbl2"/>
            <View
                android:background="@drawable/rectangle_bg_indigo_100_border_black_900"
                android:id="@+id/viewRectangleOne"
                android:layout_gravity="end"
                android:layout_height="@dimen/_36pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_13pxv" android:layout_width="@dimen/_265pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtThree"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_57pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{frameTwoVM.frameTwoModel.txtThree}"
                style="@style/txtIntersemibold14" tools:text="@string/lbl3"/>
            <View
                android:background="@drawable/rectangle_bg_indigo_100_border_black_900"
                android:id="@+id/viewRectangleTwo"
                android:layout_gravity="end"
                android:layout_height="@dimen/_35pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_16pxv" android:layout_width="@dimen/_265pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtFour"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_34pxh"
                android:layout_marginStart="@dimen/_34pxh"
                android:layout_marginTop="@dimen/_57pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{frameTwoVM.frameTwoModel.txtFour}"
                style="@style/txtIntersemibold14" tools:text="@string/lbl4"/>
            <View
                android:background="@drawable/rectangle_bg_indigo_100_border_black_900"
                android:id="@+id/viewRectangleThree"
                android:layout_gravity="end"
                android:layout_height="@dimen/_35pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_23pxv" android:layout_width="@dimen/_265pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtFive"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_30pxh"
                android:layout_marginStart="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_60pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{frameTwoVM.frameTwoModel.txtFive}"
                style="@style/txtIntersemibold14" tools:text="@string/lbl5"/>
            <View
                android:background="@drawable/rectangle_bg_indigo_100_border_black_900"
                android:id="@+id/viewRectangleFour"
                android:layout_gravity="end"
                android:layout_height="@dimen/_36pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_265pxh"/>
            <TextView android:ellipsize="end" android:id="@+id/txtSix"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_33pxh"
                android:layout_marginStart="@dimen/_33pxh"
                android:layout_marginTop="@dimen/_61pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@{frameTwoVM.frameTwoModel.txtSix}"
                style="@style/txtIntersemibold14" tools:text="@string/lbl6"/>
            <View
                android:background="@drawable/rectangle_bg_indigo_100_border_black_900"
                android:id="@+id/viewRectangleFive"
                android:layout_gravity="end"
                android:layout_height="@dimen/_35pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_19pxv" android:layout_width="@dimen/_265pxh"/>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearRowseven"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30pxv"
                android:layout_marginEnd="@dimen/_39pxh"
                android:layout_marginStart="@dimen/_39pxh"
                android:layout_marginTop="@dimen/_61pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSeven"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_weight="0.89"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{frameTwoVM.frameTwoModel.txtSeven}"
                    style="@style/txtIntersemibold14" tools:text="@string/msg2"/>
                <View android:background="@color/bluegray_100"
                    android:id="@+id/viewRectangleSix"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_marginStart="@dimen/_11pxh"
                    android:layout_marginTop="@dimen/_3pxv" android:layout_width="@dimen/_21pxh"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
