<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="frameFourVM" type="com.sapplication.app.modules.framefour.data.viewmodel.FrameFourVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearColumnhome"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearAndroidLarge"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylewhite_A700">
            <ImageView android:id="@+id/imageHome"
                android:layout_gravity="end"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginEnd="@dimen/_18pxh"
                android:layout_marginStart="@dimen/_18pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="@dimen/_41pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_home"
                tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
            <TextView android:ellipsize="end"
                android:gravity="center_horizontal"
                android:id="@+id/txtEight"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_82pxh"
                android:layout_marginStart="@dimen/_82pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{frameFourVM.frameFourModel.txtEight}"
                style="@style/txtIntersemibold35" tools:text="@string/lbl7"/>
            <FrameLayout android:id="@+id/frameStackframeone"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_97pxv"
                android:layout_marginEnd="@dimen/_82pxh"
                android:layout_marginStart="@dimen/_82pxh"
                android:layout_marginTop="@dimen/_58pxv" android:layout_width="@dimen/_147pxh">
                <ImageView android:id="@+id/imageFrameOne"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_97pxh"
                    android:layout_width="@dimen/_147pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_frame1"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_frame1"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtNine"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_24pxv"
                    android:layout_marginEnd="@dimen/_19pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{frameFourVM.frameFourModel.txtNine}"
                    style="@style/txtIntersemibold35_1" tools:text="@string/lbl8"/>
            </FrameLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btn"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_97pxv"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_82pxh"
                android:layout_marginStart="@dimen/_82pxh"
                android:layout_marginTop="@dimen/_80pxv"
                android:layout_width="@dimen/_147pxh"
                android:paddingBottom="@dimen/_26pxv"
                android:paddingEnd="@dimen/_29pxh"
                android:paddingStart="@dimen/_29pxh"
                android:paddingTop="@dimen/_26pxv"
                android:singleLine="true" android:text="@string/lbl9"
                android:textAllCaps="false"
                style="@style/btnSolidRoundedOutline" tools:text="@string/lbl9"/>
        </LinearLayout>
    </LinearLayout>
</layout>
